objects/Parent_Volunteer_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Parent Volunteer Hours</relationshipLabel>
        <relationshipName>Parent_Volunteer_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Parent Volunteer Hours</relationshipLabel>
        <relationshipName>Parent_Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Hours_Reporting_Period_1__c</fullName>
        <label>Volunteer Hours Reporting Period 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Hours_Reporting_Period_2__c</fullName>
        <label>Volunteer Hours Reporting Period 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Hours_Reporting_Period_3__c</fullName>
        <label>Volunteer Hours Reporting Period 3</label>
        <type>TextArea</type>
    </fields>
    <label>Parent Volunteer Hours</label>
    <nameField>
        <label>Parent Volunteer Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Volunteer Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>